@@ -15,6 +15,12 @@ Added
 - xnatpy changes the user-agent header to give detailed information about
   the xnatpy client running.
 
+Improved
+~~~~~~~~
+
+- Avoid use of get_source when generating xnatpy module code, which should help
+  when compiling xnatpy to a binary (py2exe etc)
+
 0.3.18 - 2019-06-06
 -------------------
 
